Updated dependencies and ignore

--- a/bower.json
+++ b/bower.json
@@ -22,16 +22,15 @@
     "polymer": "Polymer/polymer#1.9 - 2"
   },
   "devDependencies": {
-    "paper-styles": "PolymerElements/paper-styles#1 - 2",
     "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
     "iron-meta": "PolymerElements/iron-meta#1 - 2",
+    "paper-styles": "PolymerElements/paper-styles#1 - 2",
     "web-component-tester": "^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   },
   "variants": {
     "1.x": {
       "dependencies": {
-        "paper-styles": "PolymerElements/paper-styles#^1.0.2",
         "iron-icon": "PolymerElements/iron-icon#^1.0.0",
         "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
         "polymer": "Polymer/polymer#^1.9"
@@ -39,8 +38,9 @@
       "devDependencies": {
         "iron-component-page": "PolymerElements/iron-component-page#1.0.0",
         "iron-meta": "PolymerElements/iron-meta#^1.0.0",
-        "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-        "web-component-tester": "^4.0.0"
+        "paper-styles": "PolymerElements/paper-styles#^1.0.2",
+        "web-component-tester": "^4.0.0",
+        "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
       },
       "resolutions": {
         "webcomponentsjs": "^0.7"
